fix: update the banner overviw to align with page

--- a/css/style.css
+++ b/css/style.css
@@ -78,7 +78,7 @@ body {
   flex-direction: column;
   justify-content: space-between; }
 
-.hotel-view {
+.matatu-view {
   flex: 1; }
 
 .detail {
