--- a/sass/_layout.scss
+++ b/sass/_layout.scss
@@ -30,14 +30,14 @@
   justify-content: space-between;
 }
 
-.hotel-view {
+.matatu-view {
   flex: 1;
   
 }
 
 
 ////////////////////////////// 
-//   Hotel Detail
+//   Matatu Detail
 .detail {
   font-size: 1.4rem;
   display: flex;
